--- a/StarDancers/package.json
+++ b/StarDancers/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.4",
     "@heroicons/vue": "^2.0.13",
+    "axios": "^1.1.3",
     "vue": "^3.2.41",
+    "vue-cookies": "^1.8.2",
     "vue-router": "^4.1.5"
   },
   "devDependencies": {
