prod version of stripe

--- a/StarDancersAPI/Dockerfile
+++ b/StarDancersAPI/Dockerfile
@@ -4,6 +4,8 @@ WORKDIR /usr/src/app/StarDancersAPI
 
 COPY package*.json ./
 
-RUN npm install
+RUN npm install && npm run build
+
+CMD ["npm", "run", "start"]
 
 EXPOSE 1337
