--- a/StarDancers/.gitignore
+++ b/StarDancers/.gitignore
@@ -7,6 +7,7 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+.env
 node_modules
 .DS_Store
 dist
@@ -22,6 +23,7 @@ coverage
 !.vscode/extensions.json
 .idea
 *.suo
+.env
 *.ntvs*
 *.njsproj
 *.sln
