--- a/SendText/package.json
+++ b/SendText/package.json
@@ -6,6 +6,7 @@
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "node-cron": "^3.0.2",
+    "request": "^2.88.2",
     "telesignsdk": "^2.2.3"
   },
   "type": "module"
