--- a/StarDancers/package.json
+++ b/StarDancers/package.json
@@ -33,6 +33,8 @@
     "@rushstack/eslint-patch": "^1.1.4",
     "@types/node": "^16.18.126",
     "@types/qs": "^6.14.0",
+    "@types/react": "^19.1.11",
+    "@types/react-dom": "^19.1.7",
     "@vitejs/plugin-vue": "^3.1.2",
     "@vitejs/plugin-vue-jsx": "^2.0.1",
     "@vue/eslint-config-prettier": "^7.0.0",
