--- a/StarDancers/Dockerfile
+++ b/StarDancers/Dockerfile
@@ -2,25 +2,25 @@
 FROM node:18 AS build
 WORKDIR /app
 
-# Copy only package files first
+# Copy package files and install dependencies
 COPY package*.json ./
-
-# Install all deps (NOT just production)
-# we need dev deps like vite, typescript, vue-tsc for building
 RUN npm install
 
-# Now copy the rest of the code
+# Copy source code
 COPY . .
 
-# Run the build
+# Build Vue app
 RUN npm run build
 
-# Stage 2: Serve with Nginx
-FROM nginx:alpine
-COPY --from=build /app/dist /usr/share/nginx/html
+# Stage 2: Run with a static server
+FROM node:18-alpine
+WORKDIR /app
 
-# Copy custom nginx config
-COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Install a tiny static file server
+RUN npm install -g serve
 
-EXPOSE 80
-CMD ["nginx", "-g", "daemon off;"]
+# Copy build output
+COPY --from=build /app/dist ./dist
+
+EXPOSE 8080
+CMD ["serve", "-s", "dist", "-l", "8080"]
