--- a/SendText/package.json
+++ b/SendText/package.json
@@ -2,12 +2,13 @@
   "name": "SendText",
   "version": "0.0.0",
   "dependencies": {
-    "twilio": "^5.0.3",
     "api": "^5.0.4",
     "axios": "^1.2.1",
     "dotenv": "^16.0.3",
     "node-cron": "^3.0.2",
-    "request": "^2.88.2"
+    "pdfkit": "^0.17.2",
+    "request": "^2.88.2",
+    "twilio": "^5.0.3"
   },
   "type": "module"
 }
